--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -29,4 +29,4 @@ jobs:
           aws-region: us-east-2
 
       - name: Deploy to S3
-        run: aws s3 sync ./public s3://mytopsongs.site --delete
+        run: aws s3 sync ./build s3://mytopsongs.site --delete
