--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          REACT_APP_BASE_URL: mytopsongs.site
+          REACT_APP_BASE_URL: http://mytopsongs.site
           REACT_APP_SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
 
       - name: Configure AWS credentials
