Update staging's CloudFormation template

--- a/.aws/staging-cloudformation.yml
+++ b/.aws/staging-cloudformation.yml
@@ -1,16 +1,29 @@
 ---
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Static website hosting with S3 and CloudFront
+Description: Static website hosting with S3
 
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: staging.mytopsongs.site
-      AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: index.html
+
+  ReadPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref S3Bucket
+      PolicyDocument:
+        Statement:
+          -
+            Effect: Allow
+            Action:
+              - s3:GetObject
+              - s3:GetObjectVersion
+            Resource: !Sub arn:aws:s3:::${S3Bucket}/*
+            Principal: "*"
 
   PublishUser:
     Type: AWS::IAM::User
